mod z-index (fix req)

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -9,7 +9,7 @@
     border: 1px solid #d3d3d3;
     border-radius: 20px;
     background-color: white;
-    z-index: 1;
+    z-index: 0;
 }
 
 .cardHead {
