--- a/src/components/NavigationBar/NavigationBar.module.css
+++ b/src/components/NavigationBar/NavigationBar.module.css
@@ -1,5 +1,5 @@
 .navbar {
-    z-index: 0;
+    z-index: 1;
     position: fixed;
     top: 0;
     right: 0;
